--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
             color: #fff;
             padding: 1rem 0;
             text-align: center;
+            position: relative;
+        }
+
+        header img {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            height: 50px;
         }
 
         section {
@@ -58,6 +66,7 @@
 </head>
 <body>
     <header>
+        <img src="/mnt/data/image.png" alt="W2V Ingenieure Logo">
         <h1>Ihr Weg zur Dekarbonisierung</h1>
     </header>
 
