--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </head>
 <body>
     <header>
-        <img src="/mnt/data/image.png" alt="W2V Ingenieure Logo">
+        <img src="./image.png" alt="W2V Ingenieure Logo">
         <h1>Ihr Weg zur Dekarbonisierung</h1>
     </header>
 
