--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
             position: relative;
         }
 
-        header img {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            height: 50px;
-        }
+       <header>
+    <img src="logo.png" alt="Logo" style="width: 100px; height: auto;">
+    <h1>Ihr Weg zur Dekarbonisierung</h1>
+</header>
+
 
         section {
             max-width: 800px;
