--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
             position: relative;
         }
 
-       <header>
-    <img src="logo.png" alt="Logo" style="width: 100px; height: auto;">
-    <h1>Ihr Weg zur Dekarbonisierung</h1>
-</header>
-
+        header img {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            width: 100px;
+            height: auto;
+        }
 
         section {
             max-width: 800px;
