--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
             position: absolute;
             top: 10px;
             left: 10px;
-            width: 100px;
-            height: auto;
+            height: 50px;
         }
 
         section {
@@ -67,7 +66,7 @@
 </head>
 <body>
     <header>
-        <img src="./image.png" alt="W2V Ingenieure Logo">
+        <img src="./image.jpg" alt="W2V Ingenieure Logo">
         <h1>Ihr Weg zur Dekarbonisierung</h1>
     </header>
 
