--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </head>
 <body>
     <header>
-        <img src="./image.jpg" alt="W2V Ingenieure Logo">
+         <img src="logo.png" alt="Logo" style="width: 100px; height: auto;">
         <h1>Ihr Weg zur Dekarbonisierung</h1>
     </header>
 
