--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
     </style>
 </head>
 <body>
-    <header>
-        <img src="logo.jpg" alt="Logo" style="width: 100px; height: auto;">
+    <header style="display: flex; align-items: center; gap: 10px;">
+        <img src="logo.jpg" alt="Logo" style="width: 150px; height: auto;">
         <h1>Ihr Weg zur Dekarbonisierung</h1>
     </header>
 
